fix: scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -28,21 +28,22 @@
 }
 
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-track {
-  background: white;
+  background: #f9fafb;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #e5e7eb;
-  border-radius: 6px;
+  background: black;
+  border-radius: 4px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
 .cursor-big-circle,
 .cursor-small-circle {
   pointer-events: none;
